--- a/trunk/NetworkEditor/debian/control
+++ b/trunk/NetworkEditor/debian/control
@@ -9,7 +9,7 @@ Build-Depends:
  libclam-dev,
  clam-tools,
  libqt4-dev,
- libqt4-dev (<4.4) | libqt4-opengl-dev,
+ libqt4-dev (<<4.4) | libqt4-opengl-dev,
  libqtwebkit-dev,
  qt4-dev-tools,
  docbook-to-man,
