--- a/trunk/CLAM/examples/PluginExamples/Lv2PluginExample/SConstruct
+++ b/trunk/CLAM/examples/PluginExamples/Lv2PluginExample/SConstruct
@@ -17,10 +17,9 @@ toolChain = 'default'
 if sys.platform == 'win32': toolChain = 'mingw'
 env = Environment(ENV=os.environ, tools=[toolChain], options=options)
 env.Tool("qt4", toolpath=["../../../scons/sconstools"])
+env.EnableQt4Modules("QtGui QtUiTools".split())
 env.ParseConfig('pkg-config gtk+-2.0 --libs --cflags')
-env.ParseConfig('pkg-config QtGui --libs --cflags')
-env.ParseConfig('pkg-config QtUiTools --libs --cflags')
-env.ParseConfig('pkg-config liblo --libs --cflags')
+#env.ParseConfig('pkg-config liblo --libs --cflags')
 env['SHOBJPREFIX']='generated/'
 env['QT4_MOCHPREFIX']='generated/'
 
@@ -45,20 +44,22 @@ env.EnableClamModules([
 
 networks = glob.glob("*.clamnetwork")
 
+env['CLAMLV2'] = os.path.join(env['clam_prefix'],'bin','clam_lv2_generator')
 env['LV2BASEURI'] = "http://clam-project.org/examples/lv2"
 env['DOAPFILE'  ] = "default.doap"
 
 env.Uic4(glob.glob("*.ui"))
 
 manifest = env.Command("manifest.ttl", networks,
-	"clam_lv2_generator.py --manifest -u ${LV2BASEURI} ${SOURCES} > ${TARGET}" )
+	"${CLAMLV2} --manifest -u ${LV2BASEURI} ${SOURCES} > ${TARGET}" )
 
 mainSource = env.Command("clam_plugin.cxx", networks,
-	"clam_lv2_generator.py --main -u ${LV2BASEURI} ${SOURCES} > ${TARGET}" )
+	"${CLAMLV2} --main -u ${LV2BASEURI} ${SOURCES} > ${TARGET}" )
 ttls = [
 	env.Command(os.path.splitext(os.path.basename(network))[0]+".ttl", network,
-	"clam_lv2_generator.py --ttl -u ${LV2BASEURI} ${SOURCE} > ${TARGET}" )
-#	"clam_lv2_generator.py --ttl -u ${LV2BASEURI} -d ${DOAPFILE} ${SOURCE} > ${TARGET}" )
+	"${CLAMLV2} --ttl -u ${LV2BASEURI} -y ${LV2BINARY} ${SOURCE} > ${TARGET}",
+#	"${CLAMLV2} --ttl -u ${LV2BASEURI} -d ${DOAPFILE} ${SOURCE} > ${TARGET}",
+	LV2BINARY=libraryName)
 	for network in networks ]
 
 
