--- a/trunk/NetworkEditor/debian/control
+++ b/trunk/NetworkEditor/debian/control
@@ -9,8 +9,8 @@ Build-Depends:
  libclam-dev,
  clam-tools,
  libqt4-dev,
- libqt4-dev (<<4.4) | libqt4-opengl-dev,
- libqt4-dev (<<4:4.7) | libqtwebkit-dev,
+ libqt4-opengl-dev,
+ libqtwebkit-dev,
  qt4-dev-tools,
  docbook-to-man,
  imagemagick,
