--- a/trunk/ipyclam/SConstruct
+++ b/trunk/ipyclam/SConstruct
@@ -31,7 +31,7 @@ module = env.SharedLibrary (
 	SHLIBPREFIX='',
 )
 
-module = env.SharedLibrary (
+DummyProcessingsModule = env.SharedLibrary (
 	target='DummyProcessingsModule',
 	source=['DummyProcessingsModule.cxx','DummyProcessing.cxx'],
 	SHLIBPREFIX='',
@@ -47,6 +47,7 @@ install = [
 	env.Install(targetDir, files) for targetDir, files in [
 	( os.path.join(os.path.expanduser('~/local'),'lib','python'),[
 		module,
+		DummyProcessingsModule,
 	]),
 	( os.path.join(os.path.expanduser('~/local'),'bin'),[
 		program,
@@ -56,7 +57,8 @@ install = [
 env.Alias('install', install)
 
 Default(
-	module, 
+	module,
+	DummyProcessingsModule,
 	program,
 )
 
