* ipyclam/DummyProcessings: file renamed (it will hold more than one processing definition). * ipyclam/DummyProcessings: DummyProcessing class renamed to DummyProcessingWithInAndOutPorts to better describe the class * ipyclam/DummyProcessings: change include of DummyProcessings to the correct file * ipyclam/SConstruct: same as above

--- a/ipyclam/SConstruct
+++ b/ipyclam/SConstruct
@@ -33,7 +33,7 @@ module = env.SharedLibrary (
 
 DummyProcessingsModule = env.SharedLibrary (
 	target='DummyProcessingsModule',
-	source=['DummyProcessingsModule.cxx','DummyProcessing.cxx'],
+	source=['DummyProcessingsModule.cxx','DummyProcessings.cxx'],
 	SHLIBPREFIX='',
 )
 
