--- a/CLAM/plugins/spacialization/spectral/SConstruct
+++ b/CLAM/plugins/spacialization/spectral/SConstruct
@@ -45,7 +45,7 @@ if sys.platform=="darwin" : #TODO fix. should be available in clamlibs pc
 
 if sys.platform=="win32" or 'crossmingw' in env['TOOLS'] :
 	env.Append( LIBPATH=[os.path.join(env['sandbox_path'],'local','lib')] )
-	env.Append( LIBS=['fftw3'] )
+	env.Append( LIBS=['fftw3f'] )
 
 spectral_lib = env.SharedLibrary('spectral',spectral_sources)
 
@@ -67,5 +67,3 @@ install = [
 
 env.Alias('install', install)
 env.Default(default)
-
-
