* spectral: removed clam sconstools dependency

--- a/CLAM/plugins/spacialization/spectral/SConstruct
+++ b/CLAM/plugins/spacialization/spectral/SConstruct
@@ -11,8 +11,7 @@ otherDependencies = [
 	]
 
 options = Variables('options.cache', ARGUMENTS)
-options.Add(PathVariable('clam_prefix', 'The prefix where CLAM was installed', '/usr/local'))
-options.Add(PathVariable('prefix', 'Installation prefix (normally /usr, by default this is clam_prefix)', "", validator=PathVariable.PathAccept))
+options.Add(PathVariable('prefix', 'Installation prefix (default /usr/local)', "/usr/local"))
 options.Add(PathVariable('sandbox_path', 'Path where third party libraries were installed (in windows)', "", validator=PathVariable.PathAccept))
 options.Add(BoolVariable('verbose', 'Display the full command line', 'no') )
 options.Add(BoolVariable('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
@@ -23,15 +22,10 @@ options.Save('options.cache', env)
 Help(options.GenerateHelpText(env))
 env.SConsignFile() # Single signature file
 
-CLAMInstallDir = env['clam_prefix']
-if not env['prefix'] : env['prefix'] = env['clam_prefix']
-
-clam_sconstoolspath = os.path.join(CLAMInstallDir,'share','clam','sconstools')
-if not os.access(os.path.join(clam_sconstoolspath,"clam.py"),os.R_OK):
-	raise Exception("CLAM not installed at '%s'. Use clam_prefix option."%CLAMInstallDir)
+sconstoolspath = '.'
 if env['crossmingw'] :
-	env.Tool('crossmingw', toolpath=[clam_sconstoolspath])
-env.Tool('pc', toolpath=[clam_sconstoolspath])
+	env.Tool('crossmingw', toolpath=[sconstoolspath])
+env.Tool('pc', toolpath=[sconstoolspath])
 
 env.Append( CCFLAGS=['-g','-O3','-Wall'] )
 
