--- a/trunk/CLAM/scons/libs/core/SConscript
+++ b/trunk/CLAM/scons/libs/core/SConscript
@@ -10,7 +10,7 @@ folders = [
 	'src/core',
 	'src/core/base',
 	'src/core/standard',
-	'src/core/processings',
+	'src/core/processing',
 	'src/core/ports',
 	'src/core/controls',
 	'src/Data/Base',
